# AibbBackend

./: .env  .rustfmt.toml  Cargo.toml
security/: cert.pem  key.pem
sql/: schema.sql
src/: main.rs
src/api/: person.rs
src/business/: person.rs
src/domain/: mod.rs  person.rs
src/endpoint/: person.rs
src/persistence/: error.rs  mod.rs
src/persistence/interface/: person.rs
src/persistence/postgres/: person.rs
src/persistence/postgres/sql/person/: get.sql  get_all.sql  insert.sql  remove.sql  update.sql
