[package]
name = "sqlx_test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
anyhow = "1"
async-trait = "0.1"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-actix-rustls"] }
